--- a/index.html
+++ b/index.html
@@ -4,31 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./Css/reset.css">
+    <link rel="stylesheet" href="./Css/fondo.css">
     <link rel="stylesheet" href="Css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="./js/index.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    <form action="">
-        <label for="nombre">Nombre:</label>
-        <br>
-        <input type="text" name="nombre" id="nombre">
-        <br>
-        <br>
+    <div class="area" >
+        <ul class="circles">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+        </ul>
+    </div >
 
-        <label for="area">Texto largo:</label>
-        <br>
-        <textarea name="area" id="area" cols="30" rows="10"></textarea>
-        <br>
-        <br>
+    <nav class="fondo">
+        <ul>
+            <li class="sobreMi estilo"><a href="">Sobre Mi</a></li>
+            <li class="estudios estilo"><a href="">Estudios</a></li>
+            <li class="experiencias estilo"><a href="">Experiencias</a></li>
+            <li class="habilidades estilo"><a href="">Habilidades</a></li>
+            <li class="portfolio estilo"><a href="">Porfolio</a></li>
+        </ul>
+    </nav>
 
-        <label for="email">Email:</label>
-        <br>
-        <input type="email" name="email" id="email">
-        <br>
-        <br>
+    <!-- <header>
+        <img class="flecha1" src="./Image/Flecha.png" alt="Flecha">
+        <h3 class="pagina1"><a href="./SobreMi.html">Sobre Mi</a></h3>
+        <img class="flecha2" src="./Image/Flecha.png" alt="Flecha">
+        <h3 class="pagina2"><a href="./Estudios.html">Estudios</a></h3>
+        <img class="flecha3" src="./Image/Flecha.png" alt="Flecha">
+        <h3 class="pagina3"><a href="./Experiencias.html">Experincia</a></h3>
+        <img class="flecha4" src="./Image/Flecha.png" alt="Flecha">
+        <h3 class="pagina4"><a href="./Habilidades.html">Habilidades</a></h3>
+    </header> -->
 
-        <input type="submit" value="Enviar formulario">
-        <input type="reset" value="Limpiar formulario">
-    </form>
+    <div>
+        <h1 class="nombre">Lucas Daniel</h1>
+        <h2 class="apellido">Romeo</h2>
+        <h2 class="titulo">Licenciado en Diseño Gráfico</h2>
+    </div>
+    
+   
+    
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
 </body>
 </html>
