--- a/Pages/Estudios.html
+++ b/Pages/Estudios.html
@@ -15,6 +15,51 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav class="fondo">
+            <ul class="estilo">
+                <li class="sobreMi">
+                    <a href="./Pages/SobreMi.html">Sobre Mi</a>
+                </li>
+                <li class="estudios">
+                    <a href="./Pages/Estudios.html">Estudios</a>
+                </li>
+                <li class="experiencias">
+                    <a href="./Pages/Experiencias.html">Experiencias</a>
+                </li>
+                <li class="habilidades">
+                    <a href="./Pages/Habilidades.html">Habilidades</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <Main>
+        <section>
+            <article>
+                <h1></h1>
+                <p></p>
+            </article>
+        </section>
+        <section>
+            <article>
+                <h1></h1>
+                <p></p>                
+            </article>
+        </section>
+        <section>
+            <article>
+                <h1></h1>
+                <p></p>                
+            </article>
+        </section>
+        <section>
+            <article>
+                <h1></h1>
+                <p></p>                
+            </article>
+        </section>
+    </Main>
+
     <div class="area" >
         <ul class="circles">
                 <li></li>
@@ -30,15 +75,7 @@
         </ul>
     </div >
 
-    <h1 class="home"><a href="./index.html">Lucas Daniel Romeo</a></h1>
-    <img class="flecha1" src="./Image/Flecha.png" alt="Flecha">
-    <h3 class="pagina1"><a href="./SobreMi.html">Sobre Mi</a></h3>
-    <img class="flecha2" src="./Image/Flecha.png" alt="Flecha">
-    <h3 class="pagina2"><a href="./Estudios.html">Estudios</a></h3>
-    <img class="flecha3" src="./Image/Flecha.png" alt="Flecha">
-    <h3 class="pagina3"><a href="./Experiencias.html">Experincia</a></h3>
-    <img class="flecha4" src="./Image/Flecha.png" alt="Flecha">
-    <h3 class="pagina4">Habilidades</h3>
+    <footer></footer>
     
 </body>
 </html>
