--- a/Pages/Experiencias.html
+++ b/Pages/Experiencias.html
@@ -15,6 +15,18 @@
     <title>Document</title>
 </head>
 <body>
+
+    <nav class="fondo">
+        <ul class="estilo">
+            <li class="sobreMi"><a href="./SobreMi.html">Sobre Mi</a></li>
+            <li class="estudios"><a href="./Estudios.html">Estudios</a></li>
+            <li class="experiencias"><a href="./Experiencias.html">Experiencias</a></li>
+            <li class="habilidades"><a href="./Habilidades.html">Habilidades</a></li>
+            <li class="portfolio"><a href="">Porfolio</a></li>
+        </ul>
+    </nav>
+
+    
     <div class="area" >
         <ul class="circles">
                 <li></li>
@@ -29,15 +41,6 @@
                 <li></li>
         </ul>
     </div >
-    <h1 class="home"><a href="./index.html">Lucas Daniel Romeo</a></h1>
-    <img class="flecha1" src="./Image/Flecha.png" alt="Flecha">
-    <h3 class="pagina1"><a href="./SobreMi.html">Sobre Mi</a></h3>
-    <img class="flecha2" src="./Image/Flecha.png" alt="Flecha">
-    <h3 class="pagina2"><a href="./Estudios.html">Estudios</a></h3>
-    <img class="flecha3" src="./Image/Flecha.png" alt="Flecha">
-    <h3 class="pagina3">Experincia</h3>
-    <img class="flecha4" src="./Image/Flecha.png" alt="Flecha">
-    <h3 class="pagina4"><a href="./Habilidades.html">Habilidades</a></h3>
     
 </body>
 </html>
