--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
 
 
-    <main>
+    <main class="estiloPrin">
         <div>
             <h1 class="nombre">Lucas Daniel</h1>
             <h2 class="apellido">Romeo</h2>
@@ -42,8 +42,8 @@
         
     </main>
    
-    <div class="area" >
-        <ul class="circles">
+        <div class="area" >
+            <ul class="circles">
                 <li></li>
                 <li></li>
                 <li></li>
@@ -54,8 +54,8 @@
                 <li></li>
                 <li></li>
                 <li></li>
-        </ul>
-    </div >
+            </ul>
+        </div >
 
     <footer></footer>
 
