--- a/Pages/SobreMi.html
+++ b/Pages/SobreMi.html
@@ -7,25 +7,62 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./Css/reset.css">
-    <link rel="stylesheet" href="./Css/fondo.css">
-    <link rel="stylesheet" href="./Css/styles.css">
+    <link rel="stylesheet" href="../Css/reset.css">
+    <link rel="stylesheet" href="../Css/fondo.css">
+    <link rel="stylesheet" href="../Css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Sobre Mi</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul class="estilo">
+                <li>
+                    <a href="../index.html">Lucas Daniel Romeo</a>
+                </li>
+                <li>
+                    <a href="#">Sobre Mi</a>
+                </li>
+                <li>
+                    <a href="./Estudios.html">Estudios</a>
+                </li>
+                <li>
+                    <a href="./Experiencias.html">Experiencias</a>
+                </li>
+                <li>
+                    <a href="./Habilidades.html">Habilidades</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-    <nav class="fondo">
-        <ul class="estilo">
-            <li class="sobreMi"><a href="./SobreMi.html">Sobre Mi</a></li>
-            <li class="estudios"><a href="./Estudios.html">Estudios</a></li>
-            <li class="experiencias"><a href="./Experiencias.html">Experiencias</a></li>
-            <li class="habilidades"><a href="./Habilidades.html">Habilidades</a></li>
-            <li class="portfolio"><a href="">Porfolio</a></li>
+    <main class="estiloPrin">
+        <ul>
+            <li>
+                <h1 class="titulos t1">Sobre Mi</h1>
+                <p class="texto uno">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus maiores optio provident nemo ea consectetur omnis repudiandae, impedit delectus nisi a, commodi neque fugiat dolorem blanditiis voluptatibus voluptatem adipisci dolores.</p>
+            </li>
+            <li>
+                <h1 class="titulos t2">Objetivos</h1>
+                <p class="texto dos">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum minima architecto excepturi doloremque in odio sequi, exercitationem et ipsum sint vel. Rerum consequuntur ea natus consectetur, autem porro libero excepturi?</p>
+            </li>
+            <li>
+                <h1 class="titulos t3">Motivaciones</h1>
+                <p class="texto tres">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, cupiditate temporibus officia ut libero facere veritatis suscipit eligendi nobis optio fugit cumque maiores alias commodi! Non adipisci repellat illum aliquam.</p>
+            </li>
+            <li>
+                <h1 class="titulos t4">Personalidad</h1>
+                <p class="texto cuatro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam reprehenderit sunt dolore amet excepturi? Architecto minus itaque nihil! Odit dicta accusantium fuga animi impedit quas. Repudiandae sed excepturi cupiditate quis.</p>
+            </li>
+            <li>
+                <h1 class="titulos t5">Frustaciones</h1>
+                <p class="texto cinco">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione necessitatibus tempore aliquam? Delectus, quam in ea earum, culpa odio minima tempore voluptatum laudantium vero quisquam voluptatem quod, aliquid aspernatur temporibus.</p>
+            </li>
         </ul>
-    </nav>
+    </main>
 
+    
     <div class="area" >
         <ul class="circles">
                 <li></li>
