--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <link rel="stylesheet" href="Css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="./js/index.js" defer></script>
-    <title>Document</title>
+    <title>Lucas Daniel Romeo</title>
 </head>
 <body>
+    <header>
         <nav>
             <ul class="estilo">
                 <li>
@@ -31,7 +32,7 @@
                 </li>
             </ul>
         </nav>
-
+    </header>
 
     <main class="estiloPrin">
         <div>
