--- a/Pages/Estudios.html
+++ b/Pages/Estudios.html
@@ -19,7 +19,7 @@
         <nav>
             <ul class="estilo">
                 <li>
-                    <a href="../index.html">Lucas Daniel Romeo</a>
+                    <a href="../index.html" class="home">Lucas Daniel Romeo</a>
                 </li>
                 <li>
                     <a href="./SobreMi.html">Sobre Mi</a>
@@ -37,42 +37,45 @@
         </nav>
     </header>
 
-    <Main class="escenciales">
-        <ul>
-            <li>2007</li>
-            <li>2014</li>
-            <li>2015</li>
-            <li>2020</li>
-            <li>2022</li>
+    <Main class="escenciales lista">
+        <ul class="estiloPrin peso">
+            <li class="año1">2007</li>
+            <li class="año2">2014</li>
+            <li class="año3">2015</li>
+            <li class="año4">2020</li>
+            <li class="año5">2022</li>
         </ul>
-        <section>
-            <article>
-                <h1>Colegio Nuestra Señora del Valle</h1>
-                <p>Bachiller en Ciencias Naturales</p>
-            </article>
-        </section>
-        <section>
-            <article>
-                <h1>Universidad Católica de La Plata</h1>
-                <p>Licenciado en Diseño Gráfico</p>                
-            </article>
-        </section>
-        <section>
-            <article>
-                <h1>CoderHouse</h1>
-                <p>Diseño UX/UI</p>                
-            </article>
-        </section>
-        <section>
-            <article>
-                <h1>Taller Calitipográfico “Buenas Letras”</h1>               
-            </article>
-        </section>
-        <section>
-            <article>
-                <h1>Expedición Fotográfica</h1>               
-            </article>
-        </section>
+        <div class="estiloPrin">
+            <section>
+                <article>
+                    <h1 class="titulos">Colegio Nuestra Señora del Valle</h1>
+                    <p>Bachiller en Ciencias Naturales</p>
+                </article>
+            </section>
+            <section>
+                <article>
+                    <h1 class="titulos">Universidad Católica de La Plata</h1>
+                    <p>Licenciado en Diseño Gráfico</p>                
+                </article>
+            </section>
+            <section>
+                <article>
+                    <h1 class="titulos">CoderHouse</h1>
+                    <p>Diseño UX/UI</p>                
+                </article>
+            </section>
+            <section>
+                <article>
+                    <h1 class="titulos">Taller Calitipográfico “Buenas Letras”</h1>               
+                </article>
+            </section>
+            <section>
+                <article>
+                    <h1 class="titulos">Expedición Fotográfica</h1>               
+                </article>
+            </section>
+        </div>
+        
     </Main>
 
     <div class="area" >
