--- a/Pages/SobreMi.html
+++ b/Pages/SobreMi.html
@@ -19,7 +19,7 @@
         <nav>
             <ul class="estilo">
                 <li>
-                    <a href="../index.html">Lucas Daniel Romeo</a>
+                    <a href="../index.html" class="home">Lucas Daniel Romeo</a>
                 </li>
                 <li>
                     <a href="#">Sobre Mi</a>
@@ -37,7 +37,7 @@
         </nav>
     </header>
 
-    <main class="estiloPrin">
+    <main class="estiloPrin lista">
         <ul>
             <li>
                 <h1 class="titulos t1">Sobre Mi</h1>
@@ -77,6 +77,8 @@
                 <li></li>
         </ul>
     </div >
+
+    <footer></footer>
       
 </body>
 </html>
