--- a/Pages/Experiencias.html
+++ b/Pages/Experiencias.html
@@ -7,24 +7,95 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./Css/reset.css">
-    <link rel="stylesheet" href="./Css/fondo.css">
-    <link rel="stylesheet" href="./Css/styles.css">
+    <link rel="stylesheet" href="../Css/reset.css">
+    <link rel="stylesheet" href="../Css/fondo.css">
+    <link rel="stylesheet" href="../Css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Experiencias</title>
 </head>
 <body>
 
-    <nav class="fondo">
-        <ul class="estilo">
-            <li class="sobreMi"><a href="./SobreMi.html">Sobre Mi</a></li>
-            <li class="estudios"><a href="./Estudios.html">Estudios</a></li>
-            <li class="experiencias"><a href="./Experiencias.html">Experiencias</a></li>
-            <li class="habilidades"><a href="./Habilidades.html">Habilidades</a></li>
-            <li class="portfolio"><a href="">Porfolio</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <ul class="estilo">
+                <li>
+                    <a href="../index.html">Lucas Daniel Romeo</a>
+                </li>
+                <li>
+                    <a href="./SobreMi.html">Sobre Mi</a>
+                </li>
+                <li>
+                    <a href="./Estudios.html">Estudios</a>
+                </li>
+                <li>
+                    <a href="#">Experiencias</a>
+                </li>
+                <li>
+                    <a href="./Habilidades.html">Habilidades</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="listaFondo">
+        <div>
+            <ul>
+                <li>2013</li>
+                <li>2016</li>
+                <li>2018</li>
+                <li>2020</li>
+                <li>2021</li>
+                <li>2022</li>
+                <li>2023</li>
+            </ul>
+        </div>
+        <div>
+            <Section>
+                <article>
+                    <h1>Clases de Informática Básica</h1>
+                    <p>Profesor de personas mayores.</p>
+                </article>
+            </Section>
+            <Section>
+                <article>
+                    <h1>M&S Estudio de Contabilidad</h1>
+                    <p>Administrativo de cuenta Junior, digitalizacion de cuentas y cargo de datos.</p>
+                </article>
+            </Section>
+            <Section>
+                <article>
+                    <h1>LR Design</h1>
+                    <p>Emprendimiento personal, desarrollo de Marca Empresarial y estrategia para un mejor posicionamiento, Diseño de Páginas web y Diseño en General.</p>
+                </article>
+            </Section>
+            <Section>
+                <article>
+                    <h1>Gamasi Empresa de Limpieza</h1>
+                    <p>Diseñador Gráfico. Diseño de branding y papeleria interna y extrerna de la empresa.
+                    </p>
+                </article>
+            </Section>
+            <Section>
+                <article>
+                    <h1>Valhalla Deco</h1>
+                    <p>Diseñador Gráfico. Diseño de la marca y papeleria extrerna.</p>
+                </article>
+            </Section>
+            <Section>
+                <article>
+                    <h1>Instituto Superior Viedma</h1>
+                    <p>Trabajo administrativo de atención a estudiantes y docentes. Cargo de notas y emisión de diferentes tipos de certificaciones. Diseño de la marca institutcional, realización de folleteria y publicidad en las diferentes plataformas y redes sociales.</p>
+                </article>
+            </Section>
+            <Section>
+                <article>
+                    <h1>Data Prima</h1>
+                    <p>Data Entry. Procesamiento, Validación y carga de datos en el marco del censo 2022 de Argentina</p>
+                </article>
+            </Section>
+        </div>
+    </main>
 
     
     <div class="area" >
@@ -41,6 +112,8 @@
                 <li></li>
         </ul>
     </div >
+
+    <footer></footer>
     
 </body>
 </html>
