--- a/Pages/Habilidades.html
+++ b/Pages/Habilidades.html
@@ -38,6 +38,42 @@
     </header>
 
 
+    <main>
+        <ul class="listaFondo">
+            <li>
+                <img src="../Image/Ps_1_Ps.png" alt="Logo de Photoshop">
+            </li>
+            <li>
+                <img src="../Image/Ai_1_.png" alt="Logo de Illustrator">
+            </li>
+            <li>
+                <img src="../Image/Ae_1_.png" alt="Logo de After Effects">
+            </li>
+            <li>
+                <img src="..//Image/Id_1_.png" alt="Logo de Indesign">
+            </li>
+            <li>
+                <img src="../Image/Xd_1_.png" alt="Logo de Adobe Xd">
+            </li>
+            <li>
+                <img src="..//Image/Pr_1_.png" alt="Logo de Premier">
+            </li>
+            <li>
+                <img src="../Image/figma_logo.png" alt="Logo de Figma">
+            </li>
+            <li>
+                <img src="../Image/Frame.png" alt=" Logo de HTML5">
+            </li>
+            <li>
+                <img src="../Image/css.png" alt="Logo de css">
+            </li>
+            <li>
+                <img src="../Image/js.png" alt="Logo de JavaScript">
+            </li>
+        </ul>
+    </main>
+
+
     <div class="area" >
         <ul class="circles">
                 <li></li>
@@ -52,6 +88,7 @@
                 <li></li>
         </ul>
     </div >
- 
+    
+    <footer></footer>
 </body>
 </html>
