--- a/Pages/Experiencias.html
+++ b/Pages/Experiencias.html
@@ -38,13 +38,63 @@
         </nav>
     </header>
 
-    <main>
-        <Section>
-            <article>
-                <h1></h1>
-                <p></p>
-            </article>
-        </Section>
+    <main class="listaFondo">
+        <div>
+            <ul>
+                <li>2013</li>
+                <li>2016</li>
+                <li>2018</li>
+                <li>2020</li>
+                <li>2021</li>
+                <li>2022</li>
+                <li>2023</li>
+            </ul>
+        </div>
+        <div>
+            <Section>
+                <article>
+                    <h1>Clases de Informática Básica</h1>
+                    <p>Profesor de personas mayores.</p>
+                </article>
+            </Section>
+            <Section>
+                <article>
+                    <h1>M&S Estudio de Contabilidad</h1>
+                    <p>Administrativo de cuenta Junior, digitalizacion de cuentas y cargo de datos.</p>
+                </article>
+            </Section>
+            <Section>
+                <article>
+                    <h1>LR Design</h1>
+                    <p>Emprendimiento personal, desarrollo de Marca Empresarial y estrategia para un mejor posicionamiento, Diseño de Páginas web y Diseño en General.</p>
+                </article>
+            </Section>
+            <Section>
+                <article>
+                    <h1>Gamasi Empresa de Limpieza</h1>
+                    <p>Diseñador Gráfico. Diseño de branding y papeleria interna y extrerna de la empresa.
+                    </p>
+                </article>
+            </Section>
+            <Section>
+                <article>
+                    <h1>Valhalla Deco</h1>
+                    <p>Diseñador Gráfico. Diseño de la marca y papeleria extrerna.</p>
+                </article>
+            </Section>
+            <Section>
+                <article>
+                    <h1>Instituto Superior Viedma</h1>
+                    <p>Trabajo administrativo de atención a estudiantes y docentes. Cargo de notas y emisión de diferentes tipos de certificaciones. Diseño de la marca institutcional, realización de folleteria y publicidad en las diferentes plataformas y redes sociales.</p>
+                </article>
+            </Section>
+            <Section>
+                <article>
+                    <h1>Data Prima</h1>
+                    <p>Data Entry. Procesamiento, Validación y carga de datos en el marco del censo 2022 de Argentina</p>
+                </article>
+            </Section>
+        </div>
     </main>
 
     
@@ -62,6 +112,8 @@
                 <li></li>
         </ul>
     </div >
+
+    <footer></footer>
     
 </body>
 </html>
