--- a/Pages/Estudios.html
+++ b/Pages/Estudios.html
@@ -38,41 +38,45 @@
     </header>
 
     <Main class="listaFondo">
-        <ul>
+        <ul class="años linea">
             <li>2007</li>
             <li>2014</li>
             <li>2015</li>
             <li>2020</li>
             <li>2022</li>
         </ul>
-        <section>
-            <article>
-                <h1>Colegio Nuestra Señora del Valle</h1>
-                <p>Bachiller en Ciencias Naturales</p>
-            </article>
-        </section>
-        <section>
-            <article>
-                <h1>Universidad Católica de La Plata</h1>
-                <p>Licenciado en Diseño Gráfico</p>                
-            </article>
-        </section>
-        <section>
-            <article>
-                <h1>CoderHouse</h1>
-                <p>Diseño UX/UI</p>                
-            </article>
-        </section>
-        <section>
-            <article>
-                <h1>Taller Calitipográfico “Buenas Letras”</h1>               
-            </article>
-        </section>
-        <section>
-            <article>
-                <h1>Expedición Fotográfica</h1>               
-            </article>
-        </section>
+
+        <div class="estiloPrin">
+            <section>
+                <article>
+                    <h1>Colegio Nuestra Señora del Valle</h1>
+                    <p>Bachiller en Ciencias Naturales</p>
+                </article>
+            </section>
+            <section>
+                <article>
+                    <h1>Universidad Católica de La Plata</h1>
+                    <p>Licenciado en Diseño Gráfico</p>                
+                </article>
+            </section>
+            <section>
+                <article>
+                    <h1>CoderHouse</h1>
+                    <p>Diseño UX/UI</p>                
+                </article>
+            </section>
+            <section>
+                <article>
+                    <h1>Taller Calitipográfico “Buenas Letras”</h1>               
+                </article>
+            </section>
+            <section>
+                <article>
+                    <h1>Expedición Fotográfica</h1>               
+                </article>
+            </section>
+        </div>
+        
     </Main>
 
     <div class="area" >
