--- a/Pages/Experiencias.html
+++ b/Pages/Experiencias.html
@@ -40,7 +40,7 @@
 
     <main class="listaFondo">
         <div>
-            <ul>
+            <ul class="años linea">
                 <li>2013</li>
                 <li>2016</li>
                 <li>2018</li>
@@ -50,7 +50,7 @@
                 <li>2023</li>
             </ul>
         </div>
-        <div>
+        <div class="estiloPrin">
             <Section>
                 <article>
                     <h1>Clases de Informática Básica</h1>
