--- a/Pages/Estudios.html
+++ b/Pages/Estudios.html
@@ -46,31 +46,31 @@
             <li>2022</li>
         </ul>
 
-        <div class="estiloPrin">
-            <section>
-                <article>
+        <div class="estiloPrin p0">
+            <section >
+                <article >
                     <h1>Colegio Nuestra Señora del Valle</h1>
                     <p>Bachiller en Ciencias Naturales</p>
                 </article>
             </section>
-            <section>
-                <article>
+            <section >
+                <article >
                     <h1>Universidad Católica de La Plata</h1>
                     <p>Licenciado en Diseño Gráfico</p>                
                 </article>
             </section>
-            <section>
-                <article>
+            <section >
+                <article >
                     <h1>CoderHouse</h1>
                     <p>Diseño UX/UI</p>                
                 </article>
             </section>
-            <section>
+            <section >
                 <article>
                     <h1>Taller Calitipográfico “Buenas Letras”</h1>               
                 </article>
             </section>
-            <section>
+            <section >
                 <article>
                     <h1>Expedición Fotográfica</h1>               
                 </article>
