--- a/Pages/Experiencias.html
+++ b/Pages/Experiencias.html
@@ -50,47 +50,47 @@
                 <li>2023</li>
             </ul>
         </div>
-        <div class="estiloPrin">
+        <div class="estiloPrin p1">
             <Section>
                 <article>
-                    <h1>Clases de Informática Básica</h1>
+                    <h1 class="titu">Clases de Informática Básica</h1>
                     <p>Profesor de personas mayores.</p>
                 </article>
             </Section>
             <Section>
                 <article>
-                    <h1>M&S Estudio de Contabilidad</h1>
+                    <h1 class="titu">M&S Estudio de Contabilidad</h1>
                     <p>Administrativo de cuenta Junior, digitalizacion de cuentas y cargo de datos.</p>
                 </article>
             </Section>
             <Section>
                 <article>
-                    <h1>LR Design</h1>
+                    <h1 class="titu">LR Design</h1>
                     <p>Emprendimiento personal, desarrollo de Marca Empresarial y estrategia para un mejor posicionamiento, Diseño de Páginas web y Diseño en General.</p>
                 </article>
             </Section>
             <Section>
                 <article>
-                    <h1>Gamasi Empresa de Limpieza</h1>
+                    <h1 class="titu">Gamasi Empresa de Limpieza</h1>
                     <p>Diseñador Gráfico. Diseño de branding y papeleria interna y extrerna de la empresa.
                     </p>
                 </article>
             </Section>
             <Section>
                 <article>
-                    <h1>Valhalla Deco</h1>
+                    <h1 class="titu">Valhalla Deco</h1>
                     <p>Diseñador Gráfico. Diseño de la marca y papeleria extrerna.</p>
                 </article>
             </Section>
             <Section>
                 <article>
-                    <h1>Instituto Superior Viedma</h1>
+                    <h1 class="titu">Instituto Superior Viedma</h1>
                     <p>Trabajo administrativo de atención a estudiantes y docentes. Cargo de notas y emisión de diferentes tipos de certificaciones. Diseño de la marca institutcional, realización de folleteria y publicidad en las diferentes plataformas y redes sociales.</p>
                 </article>
             </Section>
             <Section>
                 <article>
-                    <h1>Data Prima</h1>
+                    <h1 class="titu">Data Prima</h1>
                     <p>Data Entry. Procesamiento, Validación y carga de datos en el marco del censo 2022 de Argentina</p>
                 </article>
             </Section>
