--- a/Pages/Habilidades.html
+++ b/Pages/Habilidades.html
@@ -39,8 +39,8 @@
 
 
     <main>
-        <ul class="listaFondo">
-            <li>
+        <ul class="listaFondo posicion">
+            <li class="prueba">
                 <img src="../Image/Ps_1_Ps.png" alt="Logo de Photoshop">
             </li>
             <li>
