--- a/Pages/Habilidades.html
+++ b/Pages/Habilidades.html
@@ -40,8 +40,10 @@
 
     <main>
         <ul class="listaFondo posicion">
-            <li class="prueba">
-                <img src="../Image/Ps_1_Ps.png" alt="Logo de Photoshop">
+            <li>
+                <button onclick="showCircle(150,150,100)" class="boton">
+                    <img src="../Image/Ps_1_Ps.png" alt="Logo de Photoshop">
+                </button>
             </li>
             <li>
                 <img src="../Image/Ai_1_.png" alt="Logo de Illustrator">
@@ -56,10 +58,15 @@
                 <img src="../Image/Xd_1_.png" alt="Logo de Adobe Xd">
             </li>
             <li>
+                <button>
+
+                </button>
                 <img src="..//Image/Pr_1_.png" alt="Logo de Premier">
             </li>
             <li>
-                <img src="../Image/figma_logo.png" alt="Logo de Figma">
+                <button onclick="showCircle(150,150,100)" class="boton">
+                    <img src="../Image/figma_logo.png" alt="Logo de Figma">
+                </button>
             </li>
             <li>
                 <img src="../Image/Frame.png" alt=" Logo de HTML5">
@@ -71,6 +78,7 @@
                 <img src="../Image/js.png" alt="Logo de JavaScript">
             </li>
         </ul>
+
     </main>
 
 
