--- a/Pages/Estudios.html
+++ b/Pages/Estudios.html
@@ -18,7 +18,7 @@
     <header>
         <nav>
             <ul class="estilo">
-                <li>
+                <li class="home">
                     <a href="../index.html">Lucas Daniel Romeo</a>
                 </li>
                 <li>
@@ -94,7 +94,19 @@
         </ul>
     </div >
 
-    <footer></footer>
+    <footer>
+
+        <div class="redes">
+            <h1 class="estiloPrin">Contacto</h1>
+            <a href="https://www.behance.net/lucasromeo92ad?tracking_source=search_users|Lucas%20Romeo" target="_blank">
+                <img src="..//Image/behance.png" alt="">
+            </a>
+            <a href="https://ar.linkedin.com/in/lucas-daniel-romeo-9992a211b" target="_blank">
+                <img src="..//Image/Linkedin.png" alt="">
+            </a>
+        </div>    
+        
+    </footer>
     
 </body>
 </html>
