--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
                     <a href="./Pages/Habilidades.html">Habilidades</a>
                 </li>
             </ul>
+            <div class="menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
         </nav>
     </header>
 
@@ -58,7 +63,19 @@
             </ul>
         </div >
 
-    <footer></footer>
+    <footer>
+
+        <div class="redes">
+            <h1 class="estiloPrin">Contacto</h1>
+            <a href="https://www.behance.net/lucasromeo92ad?tracking_source=search_users|Lucas%20Romeo" target="_blank">
+                <img src="..//Image/behance.png" alt="">
+            </a>
+            <a href="https://ar.linkedin.com/in/lucas-daniel-romeo-9992a211b" target="_blank">
+                <img src="..//Image/Linkedin.png" alt="">
+            </a>
+        </div>    
+
+    </footer>
 
 
 </body>
