--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
     <footer>
 
         <div class="redes">
-            <h1 class="estiloPrin">Contacto</h1>
+            <h1 class="estilo">
+                <a href="..//Pages/Contacto.html">Contacto</a>
+            </h1>
             <a href="https://www.behance.net/lucasromeo92ad?tracking_source=search_users|Lucas%20Romeo" target="_blank">
                 <img src="..//Image/behance.png" alt="">
             </a>
