--- a/Pages/Estudios.html
+++ b/Pages/Estudios.html
@@ -97,8 +97,10 @@
     <footer>
 
         <div class="redes">
-            <h1 class="estiloPrin">Contacto</h1>
-            <a href="https://www.behance.net/lucasromeo92ad?tracking_source=search_users|Lucas%20Romeo" target="_blank">
+            <h1 class="estilo">
+                <a href="./Contacto.html" class="margen">Contacto</a>
+            </h1>
+            <a href="https://www.behance.net/lucasromeo92ad?tracking_source=search_users|Lucas%20Romeo" target="_blank" class="margen">
                 <img src="..//Image/behance.png" alt="">
             </a>
             <a href="https://ar.linkedin.com/in/lucas-daniel-romeo-9992a211b" target="_blank">
