--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 
         <div class="redes">
             <h1 class="estilo">
-                <a href="..//Pages/Contacto.html">Contacto</a>
+                <a href="..//Pages/Contacto.html" class="margen">Contacto</a>
             </h1>
-            <a href="https://www.behance.net/lucasromeo92ad?tracking_source=search_users|Lucas%20Romeo" target="_blank">
+            <a href="https://www.behance.net/lucasromeo92ad?tracking_source=search_users|Lucas%20Romeo" target="_blank" class="margen">
                 <img src="..//Image/behance.png" alt="">
             </a>
             <a href="https://ar.linkedin.com/in/lucas-daniel-romeo-9992a211b" target="_blank">
