--- a/Pages/Estudios.html
+++ b/Pages/Estudios.html
@@ -78,7 +78,7 @@
         </div>
         
     </Main>
-
+<!-- Este div es el fondo animado de la pagina -->
     <div class="area" >
         <ul class="circles">
                 <li></li>
