se arreglo el fondo, lineas de tiempo y se agregaron los botones en javascript

--- a/Pages/SobreMi.html
+++ b/Pages/SobreMi.html
@@ -38,6 +38,23 @@
     </header>
 
     <main class="estiloPrin listaFondo">
+        <!-- Fondo animado -->
+        <div class="area" >
+            <ul class="circles">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+            </ul>
+        </div >
+
+            <!-- Titulo principal -->
         <ul>
             <li>
                 <h1 class="titulos t1">Sobre Mi</h1>
@@ -62,21 +79,7 @@
         </ul>
     </main>
 
-    
-    <div class="area" >
-        <ul class="circles">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-        </ul>
-    </div >
+
 
     <footer>
 
