--- a/Pages/Habilidades.html
+++ b/Pages/Habilidades.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../Css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="..//Javascript/index.js"></script>
     <title>Habilidades</title>
 </head>
 <body>
@@ -39,64 +40,86 @@
 
 
     <main>
+
+        <!-- Fondo Animado -->
+
+        <div class="area" >
+            <ul class="circles">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+            </ul>
+        </div >
+
+
+        <!-- Lista de Habilidades -->
+
         <ul class="listaFondo posicion">
             <li>
-                <button onclick="showCircle(150,150,100)" class="boton">
+                <button class="miBoton">
                     <img src="../Image/Ps_1_Ps.png" alt="Logo de Photoshop">
+                    <svg class="porcentaje-circulo" width="300" height="300">
+                        <circle class="porcentaje-borde" cx="20" cy="20" r="18"></circle>
+                    </svg>
+                    <span class="porcentaje-numero">0%</span>
                 </button>
             </li>
             <li>
-                <img src="../Image/Ai_1_.png" alt="Logo de Illustrator">
-            </li>
-            <li>
-                <img src="../Image/Ae_1_.png" alt="Logo de After Effects">
-            </li>
-            <li>
-                <img src="..//Image/Id_1_.png" alt="Logo de Indesign">
-            </li>
-            <li>
-                <img src="../Image/Xd_1_.png" alt="Logo de Adobe Xd">
-            </li>
-            <li>
-                <button>
-
+                <button class="boton">
+                    <img src="../Image/Ai_1_.png" alt="Logo de Illustrator">
                 </button>
-                <img src="..//Image/Pr_1_.png" alt="Logo de Premier">
             </li>
             <li>
-                <button onclick="showCircle(150,150,100)" class="boton">
+                <button class="boton">
+                    <img src="../Image/Ae_1_.png" alt="Logo de After Effects">
+                </button>
+            </li>
+            <li>
+                <button class="boton">
+                    <img src="..//Image/Id_1_.png" alt="Logo de Indesign">
+                </button>
+            </li>
+            <li>
+                <button class="boton">
+                    <img src="../Image/Xd_1_.png" alt="Logo de Adobe Xd">
+                </button>
+            </li>
+            <li>
+                <button class="boton">
+                    <img src="..//Image/Pr_1_.png" alt="Logo de Premier">
+                </button>
+            </li>
+            <li>
+                <button class="boton">
                     <img src="../Image/figma_logo.png" alt="Logo de Figma">
                 </button>
             </li>
             <li>
-                <img src="../Image/Frame.png" alt=" Logo de HTML5">
+                <button class="boton">
+                    <img src="../Image/Frame.png" alt=" Logo de HTML5">
+                </button>
             </li>
             <li>
-                <img src="../Image/css.png" alt="Logo de css">
+                <button class="boton">
+                    <img src="../Image/css.png" alt="Logo de css">
+                </button>
             </li>
             <li>
-                <img src="../Image/js.png" alt="Logo de JavaScript">
+                <button class="boton">
+                    <img src="../Image/js.png" alt="Logo de JavaScript">
+                </button>
             </li>
         </ul>
 
     </main>
 
-
-    <div class="area" >
-        <ul class="circles">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-        </ul>
-    </div >
-    
     <footer>
 
         <div class="redes">
