--- a/index.html
+++ b/index.html
@@ -31,11 +31,6 @@
                     <a href="./Pages/Habilidades.html">Habilidades</a>
                 </li>
             </ul>
-            <div class="menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
         </nav>
     </header>
 
@@ -69,12 +64,10 @@
         
     </main>
    
-
-
     <footer>
 
         <div class="redes">
-            <h1 class="estilo">
+            <h1 class="estilo1">
                 <a href="..//Pages/Contacto.html" class="margen">Contacto</a>
             </h1>
             <a href="https://www.behance.net/lucasromeo92ad?tracking_source=search_users|Lucas%20Romeo" target="_blank" class="margen">
