--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="../Css/reset.css">
     <link rel="stylesheet" href="../Css/fondo.css">
     <link rel="stylesheet" href="../Css/contacto.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="./js/index.js" defer></script>
+    <script src="../Javascript/index.js"></script>
     <title>Contacto</title>
 </head>
 <body>
@@ -54,7 +53,7 @@
     <main>
       <div class="container">
         <h2 class="estiloPrin">Contacto</h2>
-        <form>
+        <form onsubmit="confirmacion(); return false;">
           <label for="nombre">Nombre:</label>
           <input type="text" id="nombre" required>
           
