--- a/Pages/Habilidades.html
+++ b/Pages/Habilidades.html
@@ -9,10 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../Css/reset.css">
     <link rel="stylesheet" href="../Css/fondo.css">
-    <link rel="stylesheet" href="../Css/styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script src="..//Javascript/index.js"></script>
+    <link rel="stylesheet" href="../Css/habilidades.css">
+    <script src="../Javascript/index.js"></script>
     <title>Habilidades</title>
 </head>
 <body>
@@ -61,60 +59,66 @@
 
         <!-- Lista de Habilidades -->
 
-        <ul class="listaFondo posicion">
+        <ul class="listaItems">
             <li>
-                <button class="miBoton">
+                <button class="boton" onclick="tooglePorcentaje()">
                     <img src="../Image/Ps_1_Ps.png" alt="Logo de Photoshop">
-                    <svg class="porcentaje-circulo" width="300" height="300">
-                        <circle class="porcentaje-borde" cx="20" cy="20" r="18"></circle>
-                    </svg>
-                    <span class="porcentaje-numero">0%</span>
                 </button>
+                <div class="porcentaje estiloPrin" style="display: none;" >50%</div>
             </li>
             <li>
                 <button class="boton">
                     <img src="../Image/Ai_1_.png" alt="Logo de Illustrator">
                 </button>
+                <div class="porcentaje estiloPrin" style="display: block;" >50%</div>
             </li>
             <li>
                 <button class="boton">
                     <img src="../Image/Ae_1_.png" alt="Logo de After Effects">
                 </button>
+                <div class="porcentaje estiloPrin" style="display: block;" >50%</div>
             </li>
             <li>
                 <button class="boton">
                     <img src="..//Image/Id_1_.png" alt="Logo de Indesign">
                 </button>
+                <div class="porcentaje estiloPrin" style="display: block;" >50%</div>
             </li>
             <li>
                 <button class="boton">
                     <img src="../Image/Xd_1_.png" alt="Logo de Adobe Xd">
                 </button>
+                <div class="porcentaje estiloPrin" style="display: block;" >50%</div>
             </li>
             <li>
                 <button class="boton">
                     <img src="..//Image/Pr_1_.png" alt="Logo de Premier">
                 </button>
+                <div class="porcentaje estiloPrin" style="display: block;" >50%</div>
             </li>
             <li>
                 <button class="boton">
                     <img src="../Image/figma_logo.png" alt="Logo de Figma">
                 </button>
+                <div class="porcentaje estiloPrin" style="display: block;" >50%</div>
             </li>
             <li>
                 <button class="boton">
                     <img src="../Image/Frame.png" alt=" Logo de HTML5">
                 </button>
+                <div class="porcentaje estiloPrin" style="display: block;" >50%</div>
             </li>
             <li>
                 <button class="boton">
                     <img src="../Image/css.png" alt="Logo de css">
                 </button>
+                <div class="porcentaje estiloPrin" style="display: block;" >50%</div>
             </li>
             <li>
                 <button class="boton">
                     <img src="../Image/js.png" alt="Logo de JavaScript">
                 </button>
+                <div class="porcentaje estiloPrin" style="display: block;" >50%</div>
             </li>
         </ul>
 
@@ -122,8 +126,8 @@
 
     <footer>
 
-        <div class="redes">
-            <h1 class="estilo">
+        <div class="redes estiloPrin">
+            <h1>
                 <a href="./Contacto.html" class="margen">Contacto</a>
             </h1>
             <a href="https://www.behance.net/lucasromeo92ad?tracking_source=search_users|Lucas%20Romeo" target="_blank" class="margen">
