arreglado el java

--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -51,8 +51,8 @@
 
 </div >
     <main>
-      <div class="container">
-        <h2 class="estiloPrin">Contacto</h2>
+      <div class="container estiloPrin">
+        <h2>Contacto</h2>
         <form onsubmit="confirmacion(); return false;">
           <label for="nombre">Nombre:</label>
           <input type="text" id="nombre" required>
@@ -71,7 +71,6 @@
     <footer>
 
         <div class="redes">
-            <h1 class="estiloPrin margen">Contacto</h1>
             <a href="https://www.behance.net/lucasromeo92ad?tracking_source=search_users|Lucas%20Romeo" target="_blank" class="margen">
                 <img src="..//Image/behance.png" alt="">
             </a>
