--- a/Pages/Habilidades.html
+++ b/Pages/Habilidades.html
@@ -61,64 +61,63 @@
 
         <ul class="listaItems">
             <li>
-                <button class="boton" onclick="tooglePorcentaje()">
+                <button class="boton" onclick="psAlerta()">
                     <img src="../Image/Ps_1_Ps.png" alt="Logo de Photoshop">
                 </button>
-                <div class="porcentaje estiloPrin" style="display: none;" >50%</div>
             </li>
             <li>
-                <button class="boton">
+                <button class="boton" onclick="ilAlerta()">
                     <img src="../Image/Ai_1_.png" alt="Logo de Illustrator">
                 </button>
-                <div class="porcentaje estiloPrin" style="display: block;" >50%</div>
+
             </li>
             <li>
-                <button class="boton">
+                <button class="boton" onclick="aeAlerta()">
                     <img src="../Image/Ae_1_.png" alt="Logo de After Effects">
                 </button>
-                <div class="porcentaje estiloPrin" style="display: block;" >50%</div>
+
             </li>
             <li>
-                <button class="boton">
+                <button class="boton" onclick="idAlerta()">
                     <img src="..//Image/Id_1_.png" alt="Logo de Indesign">
                 </button>
-                <div class="porcentaje estiloPrin" style="display: block;" >50%</div>
+
             </li>
             <li>
-                <button class="boton">
+                <button class="boton" onclick="xdAlerta()">
                     <img src="../Image/Xd_1_.png" alt="Logo de Adobe Xd">
                 </button>
-                <div class="porcentaje estiloPrin" style="display: block;" >50%</div>
+
             </li>
             <li>
-                <button class="boton">
+                <button class="boton" onclick="prAlerta()">
                     <img src="..//Image/Pr_1_.png" alt="Logo de Premier">
                 </button>
-                <div class="porcentaje estiloPrin" style="display: block;" >50%</div>
+
             </li>
             <li>
-                <button class="boton">
+                <button class="boton" onclick="figmaAlerta()">
                     <img src="../Image/figma_logo.png" alt="Logo de Figma">
                 </button>
-                <div class="porcentaje estiloPrin" style="display: block;" >50%</div>
+
             </li>
             <li>
-                <button class="boton">
+                <button class="boton" onclick="htmlAlerta()">
                     <img src="../Image/Frame.png" alt=" Logo de HTML5">
                 </button>
-                <div class="porcentaje estiloPrin" style="display: block;" >50%</div>
+
             </li>
             <li>
-                <button class="boton">
+                <button class="boton" onclick="cssAlerta()">
                     <img src="../Image/css.png" alt="Logo de css">
                 </button>
-                <div class="porcentaje estiloPrin" style="display: block;" >50%</div>
+
             </li>
             <li>
-                <button class="boton">
+                <button class="boton" onclick="jsAlerta()">
                     <img src="../Image/js.png" alt="Logo de JavaScript">
                 </button>
-                <div class="porcentaje estiloPrin" style="display: block;" >50%</div>
+
             </li>
         </ul>
 
