--- a/Pages/Habilidades.html
+++ b/Pages/Habilidades.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../Css/reset.css">
     <link rel="stylesheet" href="../Css/fondo.css">
-    <link rel="stylesheet" href="../Css/styles.css">
+    <link rel="stylesheet" href="../Css/habilidades.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="..//Javascript/index.js"></script>
@@ -63,57 +63,63 @@
 
         <ul class="listaFondo posicion">
             <li>
-                <button class="miBoton">
+                <button class="boton" onclick="togglePorcentaje(this)">
                     <img src="../Image/Ps_1_Ps.png" alt="Logo de Photoshop">
-                    <svg class="porcentaje-circulo" width="300" height="300">
-                        <circle class="porcentaje-borde" cx="20" cy="20" r="18"></circle>
-                    </svg>
-                    <span class="porcentaje-numero">0%</span>
+                    <span class="porcentaje">80%</span>
                 </button>
             </li>
             <li>
-                <button class="boton">
+                <button class="boton" onclick="togglePorcentaje(this)">
                     <img src="../Image/Ai_1_.png" alt="Logo de Illustrator">
+                    <span class="porcentaje">80%</span>
                 </button>
             </li>
             <li>
-                <button class="boton">
+                <button class="boton" onclick="togglePorcentaje(this)">
                     <img src="../Image/Ae_1_.png" alt="Logo de After Effects">
+                    <span class="porcentaje">80%</span>
                 </button>
             </li>
             <li>
-                <button class="boton">
+                <button class="boton" onclick="togglePorcentaje(this)">
                     <img src="..//Image/Id_1_.png" alt="Logo de Indesign">
+                    <span class="porcentaje">80%</span>
                 </button>
             </li>
             <li>
-                <button class="boton">
+                <button class="boton" onclick="togglePorcentaje(this)">
                     <img src="../Image/Xd_1_.png" alt="Logo de Adobe Xd">
+                    <span class="porcentaje">80%</span>
                 </button>
             </li>
             <li>
-                <button class="boton">
+                <button class="boton" onclick="togglePorcentaje(this)">
                     <img src="..//Image/Pr_1_.png" alt="Logo de Premier">
+                    <span class="porcentaje">80%</span>
                 </button>
             </li>
             <li>
-                <button class="boton">
+                <button class="boton" onclick="togglePorcentaje(this)">
                     <img src="../Image/figma_logo.png" alt="Logo de Figma">
+                    <span class="porcentaje">80%</span>
                 </button>
             </li>
             <li>
-                <button class="boton">
+                <button class="boton" onclick="togglePorcentaje(this)">
                     <img src="../Image/Frame.png" alt=" Logo de HTML5">
+                    <span class="porcentaje">80%</span>
                 </button>
             </li>
             <li>
-                <button class="boton">
+                <button class="boton" onclick="togglePorcentaje(this)">
                     <img src="../Image/css.png" alt="Logo de css">
+                    <span class="porcentaje">80%</span>
                 </button>
             </li>
             <li>
-                <button class="boton">
+                <button class="boton" onclick="togglePorcentaje(this)">
                     <img src="../Image/js.png" alt="Logo de JavaScript">
+                    <span class="porcentaje">80%</span>
                 </button>
             </li>
         </ul>
@@ -123,7 +129,7 @@
     <footer>
 
         <div class="redes">
-            <h1 class="estilo">
+            <h1>
                 <a href="./Contacto.html" class="margen">Contacto</a>
             </h1>
             <a href="https://www.behance.net/lucasromeo92ad?tracking_source=search_users|Lucas%20Romeo" target="_blank" class="margen">
