arreglado en la facu

--- a/Pages/SobreMi.html
+++ b/Pages/SobreMi.html
@@ -37,7 +37,7 @@
         </nav>
     </header>
 
-    <main class="estiloPrin listaFondo">
+    <main class="estiloPrin">
         <!-- Fondo animado -->
         <div class="area" >
             <ul class="circles">
@@ -55,26 +55,26 @@
         </div >
 
             <!-- Titulo principal -->
-        <ul class="sobremi">
-            <li>
-                <h1 class="titulos t1">Sobre Mi</h1>
-                <p class="texto uno">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus maiores optio provident nemo ea consectetur omnis repudiandae, impedit delectus nisi a, commodi neque fugiat dolorem blanditiis voluptatibus voluptatem adipisci dolores.</p>
+        <ul class="contenedor">
+            <li class="contenedorItem">
+                <h1>Sobre Mi</h1>
+                <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus maiores optio provident nemo ea consectetur omnis repudiandae, impedit delectus nisi a, commodi neque fugiat dolorem blanditiis voluptatibus voluptatem adipisci dolores.</p>
             </li>
-            <li>
-                <h1 class="titulos t2">Objetivos</h1>
-                <p class="texto dos">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum minima architecto excepturi doloremque in odio sequi, exercitationem et ipsum sint vel. Rerum consequuntur ea natus consectetur, autem porro libero excepturi?</p>
+            <li class="contenedorItem">
+                <h1>Objetivos</h1>
+                <p class="parrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum minima architecto excepturi doloremque in odio sequi, exercitationem et ipsum sint vel. Rerum consequuntur ea natus consectetur, autem porro libero excepturi?</p>
             </li>
-            <li>
-                <h1 class="titulos t3">Motivaciones</h1>
-                <p class="texto tres">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, cupiditate temporibus officia ut libero facere veritatis suscipit eligendi nobis optio fugit cumque maiores alias commodi! Non adipisci repellat illum aliquam.</p>
+            <li class="contenedorItem3">
+                <h1>Motivaciones</h1>
+                <p class="parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, cupiditate temporibus officia ut libero facere veritatis suscipit eligendi nobis optio fugit cumque maiores alias commodi! Non adipisci repellat illum aliquam.</p>
             </li>
-            <li>
-                <h1 class="titulos t4">Personalidad</h1>
-                <p class="texto cuatro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam reprehenderit sunt dolore amet excepturi? Architecto minus itaque nihil! Odit dicta accusantium fuga animi impedit quas. Repudiandae sed excepturi cupiditate quis.</p>
+            <li class="contenedorItem">
+                <h1>Personalidad</h1>
+                <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam reprehenderit sunt dolore amet excepturi? Architecto minus itaque nihil! Odit dicta accusantium fuga animi impedit quas. Repudiandae sed excepturi cupiditate quis.</p>
             </li>
-            <li>
-                <h1 class="titulos t5">Frustaciones</h1>
-                <p class="texto cinco">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione necessitatibus tempore aliquam? Delectus, quam in ea earum, culpa odio minima tempore voluptatum laudantium vero quisquam voluptatem quod, aliquid aspernatur temporibus.</p>
+            <li class="contenedorItem">
+                <h1>Frustaciones</h1>
+                <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione necessitatibus tempore aliquam? Delectus, quam in ea earum, culpa odio minima tempore voluptatum laudantium vero quisquam voluptatem quod, aliquid aspernatur temporibus.</p>
             </li>
         </ul>
     </main>
