--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <link rel="stylesheet" href="./Css/reset.css">
     <link rel="stylesheet" href="./Css/fondo.css">
     <link rel="stylesheet" href="Css/index.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
     <script src="./js/index.js" defer></script>
     <title>Lucas Daniel Romeo</title>
 </head>
 <body>
     <header>
         <nav>
-            <ul class="estilo">
+            <ul class="estilo ">
                 <li>
                     <a href="./Pages/SobreMi.html">Sobre Mi</a>
                 </li>
@@ -67,7 +68,7 @@
     <footer>
 
         <div class="redes">
-            <h1 class="estilo1">
+            <h1>
                 <a href="..//Pages/Contacto.html" class="margen">Contacto</a>
             </h1>
             <a href="https://www.behance.net/lucasromeo92ad?tracking_source=search_users|Lucas%20Romeo" target="_blank" class="margen">
