navbar no funciona

--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -15,8 +15,28 @@
 </head>
 <body>
   <header>
-    <nav>
-        <ul class="estilo">
+    <nav class="navbar">
+        <a href="../index.html" class="navHome">Lucas Daniel Romeo</a>
+        <ul class="navMenu">
+            <li class="navItem">
+                <a href="./SobreMi.html" class="navLink">Sobre Mi</a>
+            </li>
+            <li class="navItem">
+                <a href="#" class="navLink">Estudios</a>
+            </li>
+            <li class="navItem">
+                <a href="./Experiencias.html" class="navLink">Experiencias</a>
+            </li>
+            <li class="navItem">
+                <a href="./Habilidades.html" class="navLink">Habilidades</a>
+            </li>
+        </ul>
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+        <!-- <ul class="estilo">
             <li class="home">
                 <a href="../index.html">Lucas Daniel Romeo</a>
             </li>
@@ -32,7 +52,7 @@
             <li>
                 <a href="./Habilidades.html">Habilidades</a>
             </li>
-        </ul>
+        </ul> -->
     </nav>
   </header>
   <div class="area" >
