--- a/Pages/Estudios.html
+++ b/Pages/Estudios.html
@@ -98,8 +98,8 @@
 
     <footer>
 
-        <div class="redes">
-            <h1 class="estilo">
+        <div class="redes estiloPrin">
+            <h1>
                 <a href="./Contacto.html" class="margen">Contacto</a>
             </h1>
             <a href="https://www.behance.net/lucasromeo92ad?tracking_source=search_users|Lucas%20Romeo" target="_blank" class="margen">
