--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
    
     <footer>
 
-        <div class="redes">
+        <div class="redes estiloPrin">
             <h1>
                 <a href="..//Pages/Contacto.html" class="margen">Contacto</a>
             </h1>
