arreglado el menu

--- a/navmenu.html
+++ b/navmenu.html
@@ -23,7 +23,7 @@
                     <a href="./Experiencias.html" class="nav-link">Experiencias</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./Habilidades.html" class="nav-lLink">Habilidades</a>
+                    <a href="./Habilidades.html" class="nav-link">Habilidades</a>
                 </li>
             </ul>
             <div class="hamburger">
