antes de arreglar java

--- a/navmenu.html
+++ b/navmenu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Css/reset.css">
     <link rel="stylesheet" href="./Css/navmenu.css">
     <script src="./Javascript/index.js"></script>
     <title>Document</title>
@@ -23,7 +24,7 @@
                     <a href="./Experiencias.html" class="nav-link">Experiencias</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./Habilidades.html" class="nav-lLink">Habilidades</a>
+                    <a href="./Habilidades.html" class="nav-link">Habilidades</a>
                 </li>
             </ul>
             <div class="hamburger">
@@ -33,5 +34,9 @@
             </div>
         </nav>
       </header>
+
+      <main>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. A impedit delectus sapiente quas numquam hic sed! Sapiente in pariatur veniam maxime nobis odio libero voluptatibus vel delectus, nemo, expedita quia magnam? Doloribus asperiores quas aliquid laborum? Dicta officiis perspiciatis, fugit et aut quisquam excepturi nemo architecto tempore sequi consequuntur temporibus voluptate beatae, enim reiciendis iusto rem neque sit quam quibusdam fuga ab. Sed dolore consequuntur eos perferendis ipsum, voluptate natus harum! Et dolorem aliquid cum id ea iste ipsam quisquam non provident illum dolore possimus, dignissimos architecto molestias neque quidem! Repellendus eveniet laborum quidem quam eaque doloribus culpa quos fugit!
+      </main>
 </body>
 </html>
